--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "new api",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
